--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/textView1"
             android:ems="10"
             android:hint="@string/event_name"
@@ -50,6 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/editTextName"
             android:ems="10"
             android:hint="@string/event_date"
@@ -60,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/editTextDate"
             android:ems="10"
             android:hint="@string/event_time"
@@ -70,22 +73,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/editTextTime"
-            android:hint="@string/event_location"
-            android:ems="10" >
-
-            <requestFocus />
-        </EditText>
+            android:ems="10"
+            android:hint="@string/event_location" />
 
         <EditText
             android:id="@+id/editTextDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/editTextLocation"
-            android:hint="@string/event_description"
-            android:ems="10" />
-
+            android:ems="10"
+            android:hint="@string/event_description" />
     </RelativeLayout>
 
 </FrameLayout>
