--- a/res/layout/activity_create_event.xml
+++ b/res/layout/activity_create_event.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="munjeti.testing.androidtest5.MainActivity"
+    tools:context="munjeti.testing.androidtest5.CreateEvent"
     tools:ignore="MergeRootFrame" >
 
     <RelativeLayout
@@ -18,15 +18,6 @@
             android:layout_alignParentTop="true"
             android:text="@string/create_event_i" />
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:onClick="createEvent"
-            android:text="@string/create_event" />
-
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="wrap_content"
@@ -37,14 +28,6 @@
             android:ems="10"
             android:hint="@string/event_name"
             android:inputType="text" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:text="@string/go_to_events" />
 
         <EditText
             android:id="@+id/editTextDate"
