--- a/res/menu/create_event_actions.xml
+++ b/res/menu/create_event_actions.xml
@@ -3,9 +3,9 @@
     tools:context="munjeti.testing.androidtest5.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_done"
+        android:icon="@drawable/ic_action_done"
+        android:showAsAction="always"
+        android:title="action_done"/>
 
 </menu>
